--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 @import 'reset.css';
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   gap: 20px;
   justify-content: space-between;
   align-items: flex-start;
   background-color: gainsboro;
-  padding: 40px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
